ci: remove github token from git config
Use "persist-credentials: false" to disable embedding credentials in the
git config.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
         run: command -v node || (apt update && apt install -y nodejs zstd)
 
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Cache target dir
         id: target-dir
