--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Check crate version
         run: "[[ \"v$(yq '.package.version' Cargo.toml)\" == \"${{ github.ref_name }}\" ]]"
@@ -36,6 +38,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
@@ -60,6 +64,8 @@ jobs:
         run: command -v node || (apt update && apt install -y --no-install-recommends nodejs)
 
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Publish crate
         if: ${{ env.CARGO_REGISTRY_TOKEN != '' }}
