--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
   pull_request:
   push:
-    branches: [ master ]
+    branches: [master]
 
 permissions: {}
 
@@ -13,8 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: rust:latest
-    steps:
+      env:
+        CARGO_HOME: "/cargo/"
 
+    steps:
       - name: ensure node is installed for act
         if: ${{ env.ACT }}
         run: command -v node || (apt update && apt install -y nodejs zstd)
@@ -23,11 +25,20 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Cache cargo dir
+        id: cargo-dir
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo
+          path: /cargo
+
       - name: Cache target dir
         id: target-dir
         uses: actions/cache@v4
         with:
-          key: ${{ runner.os }}-target-dir
+          key: ${{ runner.os }}-target-dir-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-target-dir
           path: target
 
       - name: dev
